--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@types/node": "^20.4.2",
     "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
+    "echarts": "^5.4.3",
     "path": "^0.12.7",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@types/mockjs": "^1.0.7",
     "@vitejs/plugin-vue": "^4.2.3",
+    "mockjs": "^1.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
     "vue-tsc": "^1.8.3"
