--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
     "echarts": "^5.4.3",
+    "file-saver": "^2.0.5",
     "path": "^0.12.7",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/mockjs": "^1.0.7",
     "@vitejs/plugin-vue": "^4.2.3",
     "mockjs": "^1.1.0",
